0.9.5 - September 1, 2009
  Removed Array #extract_options!
  Renamed Adapter modules to Connection
  Removed the Connection #send_request method (now #request)
  Removed the Connection #select method -- this ends up calling Connection #method_missing

0.9.1 - July 22, 2009
  Added LibXml builder support (Thanks to Mat Brown - github.com/outoftime)

0.9.0 - July 17, 2009
  Added ability to use DirectSolrConnection instance when connecting
  Loading Java classes using full package name

0.8.9 - June 30, 2009
  Deprecated hash syntax fix from outoftime/rsolr (Mat Brown)

0.8.8 - May 6, 2009
  Added method :request to RSolr::Connection
    - this method is an alias for send_request

0.8.7 - May 6, 2009
  Added method_missing to RSolr::Connection, which sets the request handler path,
  based on the method name:
	# this sends a request like: /music_library?q=>coltrane
	solr.music_library :q=>'coltrane'
  Removed the core_ext file, put the Array extension code directly into rsolr.rb

0.8.6 - April 25, 2009
  Removed the Mash stuff -- which means the response keys from solr are only accessable using String based keys.
  Use RSolr::Ext if you want more magic.

0.8.5 - April 7, 2009
  The RSolr::Message #add method now accepts a single Message::Document or an array of Message::Document objects
  The Message::Document class has a new method: #add_field
  Tests added for both changes
  Permissions of files changed to non-executable
  -- the above changes were made by Mat Brown, thank you Mat!
  Added CannedSolrResponse module for mocks in the specs... not used yet

0.8.4 - April 3, 2009
  New test suite using RSpec and mocks coming. Run "rake spec"
    - added specs for RSolr and RSolr::Connection

0.8.3 - April 3, 2009
  RSolr::Connection
    - removed the block functionality of send_request and related methods
      - this was used to gain access to the raw adapter response
    - added #adapter_response method to all response objects